Adjust gamecontainer width spacing to be fixed

--- a/styles.css
+++ b/styles.css
@@ -27,16 +27,11 @@ form{
 .gameboard-container{ 
     display: grid;
     gap: 10px;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 300px 150px 300px;
     grid-template-rows: 1fr 1fr 1fr;
 
     justify-content: center;
     justify-items: center;
-    justify-self: center;
-
-    align-self: center;
-    align-items: center;
-    align-content: center;
 }
 
 .player-square{
